--- a/AlgoApp/app/src/main/res/values/strings.xml
+++ b/AlgoApp/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="solved">Solved?</string>
     <string name="positive_button_name">OK</string>
     <string name="set_date_message">Set Date:</string>
+    <string name="header_column_a">Algorithm</string>
+    <string name="header_column_b">I know</string>
 </resources>
